@@ -65,9 +65,13 @@ Stalker Changes
   * **New:** Version List Page and Create/Update Dialogs are added.
   * **New:** Vacation List Page and Create/Update Dialogs are added.
   * **Fix:** Merge tested, and vacation adding is finished.
-  * **New:** Version Page is created. It has Outputs,Inputs and Children as Tabs.
+  * **New:** Version Page is created. It has Outputs,Inputs and Children as
+      Tabs.
   * **New:** Studio Page is created.It has Tasks and Resources as Tabs.
   * **New:** Update Studio function id added.
+  * **New:** Thumbnail Add function is added to several objects' Summarize Pages.
+      (Task, Asset, Shot, Sequence,Department, Group). List Page is also updated
+      by new thumbnail information.
 
 
   * **JQueryGantt:**
